# PPO

./: Hyperparam_plots_script.py  NONAME_11796610.out  NONAME_11796625.out  README.md  augmentation.py  deploy.sh  encoder.py  getting_started_ppo.ipynb  impala.py  jobscript.sh  jobscript_coinrun_base.sh  policy.py  ppo.py  pyproject.toml  utils.py
jobs/: jobscript_chaser_base.sh  jobscript_chaser_impala.sh  jobscript_jumper.sh  jobscript_jumper_impala.sh  jobscript_ninja.sh  jobscript_ninja_impala.sh  jobscript_starpilot.sh  jobscript_starpilot_impala.sh
results/: Script_plots_results.py  checkpoint_chaser_500_82e27e8e-52fc-11ec-9a97-0894ef71e652.pt  checkpoint_chaser_500_impala_f7f349fc-5373-11ec-9257-0894ef71e6b2.pt  checkpoint_jumper_500_82e27e8e-52fc-11ec-a8e7-0894ef71e652.pt  checkpoint_ninja_500_impala_3b3e919e-53a6-11ec-8ee5-0894ef71e652.pt  checkpoint_starpilot_250_0f4107e0-554d-11ec-b126-0894ef90a566.pt  checkpoint_starpilot_500_0464fb36-53b0-11ec-9573-0894ef71e652.pt  checkpoint_starpilot_500_impala_1c6fa83a-51c0-11ec-8baa-0894ef71e652.pt  cool_plots.py  data_chaser_500_82e27e8e-52fc-11ec-9a97-0894ef71e652.csv  data_chaser_500_d5444082-536e-11ec-9681-98f2b3f322b2.csv  data_chaser_500_impala_f7f349fc-5373-11ec-9257-0894ef71e6b2.csv  data_jumper_500_82e27e8e-52fc-11ec-a8e7-0894ef71e652.csv  data_jumper_500_d543f794-536e-11ec-9645-0894ef71e652.csv  data_jumper_500_impala_f7f349fc-5373-11ec-be8e-0894ef71e6b2.csv  data_ninja_500_a60fd974-5397-11ec-92ca-b883034fb9c2.csv  data_ninja_500_c66fe582-532a-11ec-a9e9-98f2b3f322b2.csv  starpilot_100_run.csv  (+12 more)
(+267 files in other folders)
