[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["JordiSalaJuarez <jordisalajuarez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
procgen = "^0.10.4"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
black = "^21.11b0"
ipykernel = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
